# maimai-mcp

./: .gitignore  .mcp.json  LICENSE  LICENSE-UPSTREAM  MANIFEST.in  README.md  lhm.plugin.json  mcp.example.json  pyproject.toml
.github/workflows/: release.yml
docs/: AGENT.md  ASTRBOT_AGENT_PROMPT.md
maimai_mcp/: .env.example  README.md  __init__.py  __main__.py  bootstrap.py  cli.py  config.py  context.py  formatters.py  log.py  requirements.txt  resources.py  result.py  runtime.py  schemas.py  server.py
maimai_mcp/core/: errors.py  io_image.py  player_cache.py  qq_identity_store.py  query_common.py  tool.py  user.py
maimai_mcp/core/clients/: http.py
maimai_mcp/core/database/: qq.py
maimai_mcp/core/domain/: __init__.py  auth.py  chart.py  player.py  progress.py  rise.py
maimai_mcp/core/image/: __init__.py  assets.py  base.py  best50.py  chart.py  info.py  plate_table.py  rating_table.py  score.py  song.py  table.py
maimai_mcp/core/merge/: __init__.py  alias_list.py  play_result.py  player.py
maimai_mcp/core/official/: __init__.py  aes_cbc.py  allnet.py  client.py  convert.py  convert_lxns.py  dump.py  protocol.py  workflow.py
maimai_mcp/core/service/: __init__.py
maimai_mcp/features/: __init__.py  _cli.py
maimai_mcp/features/alias_query/: __main__.py  query.py
maimai_mcp/features/best50/: __main__.py  draw.py  query.py
maimai_mcp/features/bind_lxns/: __main__.py
maimai_mcp/features/chart_info/: __main__.py  draw.py  query.py
maimai_mcp/features/fortune/: __main__.py  draw.py  query.py
maimai_mcp/features/global_chart/: __main__.py  draw.py  query.py
maimai_mcp/features/group_rank/: __init__.py  query.py
maimai_mcp/features/level_progress/: __main__.py  draw.py  query.py
maimai_mcp/features/level_score_list/: __main__.py  draw.py  query.py
maimai_mcp/features/mai_what/: __main__.py  query.py
maimai_mcp/features/plate_table/: __main__.py  draw.py  query.py
maimai_mcp/features/play_score/: __main__.py  draw.py  query.py
maimai_mcp/features/random_song/: __main__.py  query.py
maimai_mcp/features/ranking/: __main__.py  draw.py  query.py
maimai_mcp/features/rating_table/: __main__.py  draw.py  query.py
maimai_mcp/features/rise_score/: __main__.py  draw.py  query.py
maimai_mcp/features/score_line/: __main__.py  query.py
maimai_mcp/features/search_song/: __main__.py  draw.py  query.py
maimai_mcp/features/update_alias/: __main__.py
maimai_mcp/tools/: __init__.py  catalog.py  group_rank.py  player.py  records.py  tables.py  user.py  workflow.py
scripts/: run_inspector.ps1  run_inspector.sh  smoke_mcp_tools.py
skills/maimai-mcp/: SKILL.md
skills/maimai-mcp/references/: tools.md
tests/: test_aes_cbc.py  test_convert_lxns.py  test_group_rank_cache.py  test_official_convert.py  test_official_workflow.py
(+7 files in other folders)
