[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maimai-mcp"
version = "0.1.0"
description = "maimaiDX business library and MCP server (no nonebot)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
dependencies = [
  "aiofiles>=25.1.0",
  "aiosqlite>=0.22.1",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "Pillow~=12.2.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "python-dotenv>=1.2.2",
  "pyecharts>=2.1.0",
  "playwright>=1.60.0",
  "sqlmodel>=0.0.38",
  "numpy~=2.2.6",
  "mcp>=1.0.0",
]

[project.scripts]
maimai = "maimai_mcp.cli:main"
maimai-mcp = "maimai_mcp.server:main"

[project.urls]
Repository = "https://github.com/antinomie1/maimai-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["maimai_mcp*"]
