[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maimai-mcp"
version = "0.2.0"
description = "maimaiDX query library, CLI and MCP (stdio) server for maimai DX"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "antinomie1" },
]
keywords = [
  "maimai",
  "maimaidx",
  "mcp",
  "model-context-protocol",
  "diving-fish",
  "lxns",
  "stdio",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "aiofiles>=25.1.0",
  "aiosqlite>=0.22.1",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "Pillow~=12.2.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "python-dotenv>=1.2.2",
  "sqlmodel>=0.0.38",
  "numpy~=2.2.6",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.scripts]
maimai = "maimai_mcp.cli:main"
maimai-mcp = "maimai_mcp.server:main"

[project.urls]
Homepage = "https://github.com/antinomie1/maimai-mcp"
Repository = "https://github.com/antinomie1/maimai-mcp"
Issues = "https://github.com/antinomie1/maimai-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["maimai_mcp*"]
exclude = ["maimai_mcp.logs*"]

[tool.setuptools.package-data]
maimai_mcp = [".env.example"]
